--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,17 +7,9 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "."
   },
-  "lib": [
-    "es6"
-  ],
-  "include": [
-    "src",
-  ],
-  "exclude": [
-    "node_modules",
-    "test",
-    "dist"
-  ]
+  "lib": ["es6"],
+  "include": ["src", "."],
+  "exclude": ["node_modules", "test", "dist"]
 }
