--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-crypto-com",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "Node API wrapper for crypto.com exchange",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -26,6 +26,7 @@
     "url": "https://github.com/Niible/node-crypto-com/issues"
   },
   "homepage": "https://github.com/Niible/node-crypto-com#readme",
+  "keywords": ["crypto.com", "exchange", "crypto", "CRO"],
   "dependencies": {
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
