--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": "src"
   },
   "lib": ["es6"],
-  "include": ["src", "."],
+  "include": ["src"],
   "exclude": ["node_modules", "test", "dist"]
 }
