--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "rootDir": "src"
   },
   "lib": ["es6"],
-  "include": ["src"],
+  "include": ["src", "."],
   "exclude": ["node_modules", "test", "dist"]
 }
